project(NMPFA)
set(SOURCE main.cpp)

add_executable(NMPFA ${SOURCE})

target_link_libraries(NMPFA inmost)

if(USE_SOLVER)
  if(USE_SOLVER_ANI)
    message("linking NMPFA with ani3d and BLAS")
    target_link_libraries(NMPFA ani3d ${BLAS_LIBRARIES})
    if(BLAS_LINKER_FLAGS)
      set_target_properties(NMPFA PROPERTIES LINK_FLAGS "${BLAS_LINKER_FLAGS}")
    endif()
  endif()
  if(USE_SOLVER_PETSC)
    message("linking NMPFA with PETSc")
    target_link_libraries(NMPFA ${PETSC_LIBRARIES})
  endif()
  if(USE_SOLVER_TRILINOS)
    message("linking NMPFA with Trilinos")
    target_link_libraries(NMPFA ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES})
  endif()
  if(USE_SOLVER_METIS)
    message("linking NMPFA with Metis")
    target_link_libraries(NMPFA ${METIS_LIBRARIES})
  endif()
  if(USE_SOLVER_MONDRIAAN)
    message("linking NMPFA with Mondriaan")
    target_link_libraries(NMPFA ${MONDRIAAN_LIBRARIES})
  endif()
  if(USE_SOLVER_SUPERLU)
    message("linking NMPFA with SuperLU")
    target_link_libraries(NMPFA ${SUPERLU_LIBRARIES})
  endif()
endif()


if(USE_PARTITIONER)
  if(USE_PARTITIONER_ZOLTAN)
    message("linking NMPFA with Zoltan")
    target_link_libraries(NMPFA ${ZOLTAN_LIBRARIES})
  endif()
  if(USE_PARTITIONER_PARMETIS)
    message("linking NMPFA with ParMETIS")
    target_link_libraries(NMPFA ${PARMETIS_LIBRARIES})
  endif()
endif()

if(USE_MPI)
  message("linking NMPFA with MPI")
  target_link_libraries(NMPFA ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(NMPFA PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)

install(TARGETS NMPFA EXPORT inmost-targets RUNTIME DESTINATION bin)
